# miski-ai

./: IMPLEMENTATION_PLAN.md  MVP_PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  globals.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  pipeline.rs
src-tauri/src/ai/: mod.rs  ollama.rs  prompts.rs
src-tauri/src/audio/: mod.rs  recorder.rs
src-tauri/src/storage/: json_store.rs  markdown.rs  mod.rs
src-tauri/src/transcription/: diarisation.rs  mod.rs  whisper.rs
src/components/: ErrorBoundary.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx
src/hooks/: useMeetings.ts  useRecording.ts  useSettings.ts  useSetup.ts  useStreaming.ts
src/lib/: api.ts  types.ts
src/pages/: ChatPage.tsx  HomePage.tsx  MeetingPage.tsx  MeetingsPage.tsx  ProcessingPage.tsx  RecorderPage.tsx  SettingsPage.tsx
src/stores/: recordingStore.ts
