[package]
name = "miski-ai"
version = "0.1.0"
description = "Privacy-first, on-device meeting recorder with AI transcription and summarization"
authors = ["Miski AI"]
edition = "2021"

[lib]
name = "miski_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async + HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# Audio
cpal = "0.15"
hound = "3.5"

# Transcription
whisper-rs = { version = "0.12", features = ["whisper-cpp-log"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"

